<resources>
    <string name="app_name">Economic Supervision</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="just_one_more_step">Just one more step</string>
    <string name="sms_verification_code">Account code</string>
    <string name="sms_verification_code_message">Your Economic Supervision code is:</string>
    <string name="sms_invitation">Your Economic Supervision code is:</string>
    <string name="sms_request_code">Request code</string>
    <string name="and">and</string>
    <string name="or">or</string>
    <string name="participants">participants</string>
    <string name="Not_found">Not found</string>
    <string name="paid">Paid</string>
    <string name="not_paid">not paid</string>
    <string name="completed">completed</string>
    <string name="not_completed">not completed</string>
    <string name="delete_debts">Delete debts</string>
    <string name="delete_payment_credits">Delete payment credits</string>
    <string name="have_payments">have payments</string>
    <string name="Have_Payments">Have Payments</string>
    <string name="debts">debts</string>
    <string name="new_payment_credit">New payment credit</string>
    <string name="NAME_new_payment_credit_of_VALUE">NAME´s new payment credit of VALUE</string>
    <string name="new_debt">New debt</string>
    <string name="New_debt_to_NAME_of_VALUE">New debt to NAME of VALUE</string>
    <string name="new_participant">New participant</string>
    <string name="Something_went_wrong">Something went wrong</string>
    <string name="to_pay">To pay</string>
    <string name="to_receive">to receive</string>
    <string name="incalculable">incalculable</string>
    <string name="new_group">New group</string>
    <string name="nobody">Nobody</string>
    <string name="It_has_not_been_possible_to_perform_this_action">It has not been possible to perform this action</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="The_data_entered_is_not_correct">The data entered is not correct</string>
    <string name="Go_to">Go to</string>
    <string name="permanently">permanently</string>
    <string name="with_a_single_payment_and_you_will_have">with a single payment... and you will have...</string>
    <string name="three_accounts">3 accounts</string>
    <string name="The_possibility_of_creating_2_more_accounts">The possibility of creating two more accounts</string>
    <string name="Group_payment_creation">- Group payment creation</string>
    <string name="Voice_motion_filtering">- Filtering of transactions and movements by voice</string>
    <string name="Data_recovery_from_your_old_device">- Data recovery at no additional cost</string>
    <string name="Get_premium">Get premium</string>
    <string name="forever">forever</string>
    <string name="Donate">Donate</string>
    <string name="Old_device_id">Old device id</string>
    <string name="ODID">ODID</string>
    <string name="Phone">Tel. No.</string>
    <string name="Phone_number">Phone number</string>
    <string name="Recover_data">Recover data</string>
    <string name="The_phone_number_entered_must_be_the_same_as_the_SIM_card_that_contains_this_mobile_device">The phone number entered must be the same as the SIM card that contains this mobile device.</string>
    <string name="I_agree_to_send_an_SMS_in_order_to_authenticate_myself_in_the_application">I agree to send an SMS in order to authenticate myself in the application.</string>
    <string name="I_accept_the_Terms_of_Service_and_the_Privacy_Policy_of_the_application">I accept the Terms of Service and the Privacy Policy of the application.</string>
    <string name="What_is_your_name">What is your name?</string>
    <string name="What_currency_do_you_use">What currency do you use?</string>
    <string name="How_much_money_do_you_handle">How much money do you handle?</string>
    <string name="What_is_your_phone_number">What is your phone number?</string>
    <string name="Download_Terms_of_Service">Download Terms of Service.</string>
    <string name="Download_Privacy_Policy">Download Privacy Policy.</string>
    <string name="Waiting_for_SMS_verification_code">Waiting for SMS verification code...</string>
    <string name="The_name_must_be_between_1_and_10_letters">The name must be between 1 and 10 letters</string>
    <string name="Searching_for_device">Searching for device...</string>
    <string name="Device_found">Device found...</string>
    <string name="You_must_accept_the_condition">You must accept the condition</string>
    <string name="Wrong_device_id_or_phone_number">Wrong recovery code or phone number</string>
    <string name="If_you_go_back_you_can_continue_with_the_registration">If you go back you can continue with the registration...</string>
    <string name="You_must_accept_the_Terms_of_Service_and_the_Privacy_Policy_of_the_application">You must accept the Terms of Service and the Privacy Policy of the application</string>
    <string name="The_phone_number_must_be_between_8_and_10_digits_long">The phone number must have between 8 and 10 digits</string>
    <string name="does_not_exist_as_currency">does not exist as currency</string>
    <string name="Go_premium_and_you_can_enjoy_this_option">Go premium and you can enjoy this option</string>
    <string name="You_have_reached_the_limit_of_available_account">You have reached the limit of available accounts</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Password">Password</string>
    <string name="Enabled">Enabled</string>
    <string name="Disabled">Disabled</string>
    <string name="Thanks_to_the_copied_code_you_will_be_able_to_recover_the_data_from_another_device">Thanks to the copied code you will be able to recover the data in the future</string>
    <string name="See_the_advantages_you_have_with_premium">See the advantages you have with premium</string>
    <string name="Build_new_account">Build new account</string>
    <string name="Build_account">Build account</string>
    <string name="Destroy_account">Destroy account</string>
    <string name="More_accounts">More accounts</string>
    <string name="Switch_account">Switch account</string>
    <string name="Security_system">Security system</string>
    <string name="Donation">Donation</string>
    <string name="Thank_you_very_much_for_your_donation">Thank you very much for your donation</string>
    <string name="How_much_does_he_owe_you">How much does NAME owe you?</string>
    <string name="How_much_do_you_owe">How much do you owe NAME?</string>
    <string name="Owes_you">NAME owes you X,XX?</string>
    <string name="You_owe_to">You owe X,XX to NAME?</string>
    <string name="How_much_do_they_owe_you">How much do they owe you?</string>
    <string name="between">between</string>
    <string name="Example">Example</string>
    <string name="friends_and_you_are_responsible_for_paying">Y friends and you are responsible for paying X,XX?</string>
    <string name="and_you_are_responsible_for_paying">Y and you are responsible for paying X,XX?</string>
    <string name="The_group_must_be_made_up_of_at_least_2_friends_and_you">The group must be made up of at least 2 (maximum 32) friends and you</string>
    <string name="What_do_you_want_to_call_the_group">What do you want to call the group?</string>
    <string name="Check_your_internet_connection">Check your internet connection</string>
    <string name="Who___How_many_owe_you">[Who / How many owe you]</string>
    <string name="Value_to_pay">[Value to pay]</string>
    <string name="You_have_reached_the_maximum_OBJECT_limit">You have reached the maximum OBJECT limit</string>
    <string name="Accounts">Accounts</string>
    <string name="Concepts">Concepts</string>
    <string name="Categories">Categories</string>
    <string name="Should">Should</string>
    <string name="Have">Have</string>
    <string name="Payments">Payments</string>
    <string name="Debts">Debts</string>
    <string name="Group_Payments">Group Payments</string>
    <string name="Transactions">Transactions</string>
    <string name="Conceptual__Categorical_Movements">[Conceptual / Categorical] Movements</string>
    <string name="Movements">Movements</string>
    <string name="WhatsApp_is_not_installed_on_this_device">WhatsApp is not installed on this device</string>
    <string name="The_minimum_value_per_person_is_X">The minimum value per person is X</string>
    <string name="The_maximum_value_per_person_is_X">The maximum value per person is X</string>
    <string name="LANGUAGE_is_not_supported_by_voice_assistant">LANGUAGE is not supported by voice assistant</string>
    <string name="A_moment_ago">A moment ago</string>
    <string name="A_minute_ago">A minute ago</string>
    <string name="An_hour_ago">An hour ago</string>
    <string name="X_minutes_ago">X minutes ago</string>
    <string name="X_hours_ago">X hours ago</string>
    <string name="Today">Today</string>
    <string name="Yesterday">Yesterday</string>
    <string name="X_days_ago">X days ago</string>
    <string name="Friends">Friends</string>
    <string name="Groups">Groups</string>
    <string name="Save_changes">Save changes</string>
    <string name="Starting_money_amount_and_currency">Starting money amount and currency</string>
    <string name="Account_name">Account name</string>
    <string name="You_have_reached_the_maximum_data_size">You have reached the maximum data size</string>
    <string name="Expenses">Expenses</string>
    <string name="Income">Income</string>
    <string name="Filter">Filter</string>
    <string name="Filtering">Filtering...</string>
    <string name="Add_payment">Add payment</string>
    <string name="Grant_permission">Grant permission</string>
    <string name="For_some_reason_the_data_has_been_deleted">For some reason the data has been deleted</string>
    <string name="No_transaction_found">No transaction found</string>
    <string name="No_movement_found">No movement found</string>
    <string name="The_application_must_be_updated">The application must be updated</string>
    <string name="Thank_you_very_much_for_trusting_Premium">Thank you very much for trusting Premium</string>
    <string name="Make_sure_you_have_your_data_protected">Make sure you have your data protected</string>
    <string name="Data_recovery">Data recovery</string>
    <string name="Click_to_copy_the_data_recovery_code_for_this_device">Click to copy the data recovery code</string>
    <string name="Device_id">Recovery code</string>
    <string name="Make_sure_you_have_a_good_internet_connection_before_making_the_payment">Make sure you have a good internet connection before making the payment</string>
    <string name="Download_Flaticon_Attributions">Download Flaticon Attributions</string>
    <string name="Download_LottieFiles_Attributions">Download LottieFiles Attributions</string>
    <string name="See_all_image_animation_and_software_licenses">See all image, animation and software licenses</string>
    <string name="Licenses">Licenses</string>
    <string name="Images">Images</string>
    <string name="Animations">Animations</string>
    <string name="Software">Software</string>
    <string name="You_must_enter_a_valid_amount">You must enter a valid amount</string>
    <string name="By_continuing_you_are_accepting">By continuing you are accepting</string>
    <string name="the_license_terms">the license terms...</string>
    <string name="privacy_policy">privacy policy</string>
    <string name="Resend_verification_code">Resend verification code</string>
    <string name="To_log_in_enter_the_phone_number_with_which_you_registered">To log in, enter the phone number with which you registered</string>
    <string name="I_agree_to_receive_an_SMS_in_order_to_authenticate_myself_in_the_application">I agree to receive an SMS in order to authenticate myself in the application</string>
</resources>